# article-scraper

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  ruff.toml  tox.toml
.github/workflows/: check.yaml
src/article_scraper/: __main__.py  api.py
src/article_scraper/scrapers/: _bases.py  _interfaces.py  open_news.py
src/article_scraper/utils/: driver.py  scraper_modules.py
