[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "article-scraper"
version = "v0.0"
description = "Extract articles from an oneline news web"
authors = [
    {name = "ZH", email = "abc@gmail.com"},
]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">= 3.12"
dependencies = [
]


