[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "article-scraper"
version = "0.0"
description = "Extract articles from an oneline news web"
authors = [
    {name = "zhthean", email = "zhen.hui.thean@outlook.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "requests",
    "selenium",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
]


[project.scripts]
article_scraper = "article_scraper:main"
